--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
+    "file-system": "^2.2.2",
+    "form-data": "^4.0.0",
     "mongodb": "^4.9.1",
     "npm": "^8.19.2",
     "validator": "^13.7.0"
